# mcp25xx

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
src/: bitrates.rs  config.rs  doctesthelper.rs  frame.rs  idheader.rs  interface.rs  lib.rs  registers.rs  spi_trait.rs
tests/: check_bitrates.rs  mock_bus.rs  test.rs
