[package]
name = "mcp25xx"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.6"
embedded-can = "0.3.0"
nb = "1.0.0"
modular-bitfield = { git = "https://github.com/dimpolo/modular-bitfield.git"}

[features]
mcp2515 = []
mcp25625 = []

[dev-dependencies]
embedded-hal-mock = "0.8.0"

[package.metadata.docs.rs]
all-features = true
