[package]
name = "mcp25xx"
description = "MCP2510, MCP2515 and MCP25625 CAN controller library"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/WMT-GmbH/mcp25xx"
license = "MIT OR Apache-2.0"
categories = [
    "hardware-support",
    "no-std",
    "embedded"
]
keywords = [
    "embedded-hal",
    "CAN",
    "MCP2510",
    "MCP2515",
    "MCP25625",
]

[dependencies]
embedded-hal = "1.0.0"
embedded-can = "0.4.1"
nb = "1.1.0"
modular-bitfield = "0.12.0"

[features]
mcp2515 = []
mcp25625 = []

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[package.metadata.docs.rs]
all-features = true
